// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useLabelMask renders the appropriate dom for a CURRENCY_MASK 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="static-id__label-mask"
  >
    <span
      class=""
    >
      $
    </span>
    <span
      aria-hidden="true"
      class="ds-u-display--none"
    >
      $
    </span>
  </div>
</DocumentFragment>
`;

exports[`useLabelMask renders the appropriate dom for a PHONE_MASK 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="static-id__label-mask"
  >
    <span
      class=""
    >
      ###-###-####
    </span>
    <span
      aria-hidden="true"
      class="ds-u-display--none"
    >
      ###-###-####
    </span>
  </div>
</DocumentFragment>
`;

exports[`useLabelMask renders the appropriate dom for a SSN_MASK 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="static-id__label-mask"
  >
    <span
      class=""
    >
      ###-##-####
    </span>
    <span
      aria-hidden="true"
      class="ds-u-display--none"
    >
      ###-##-####
    </span>
  </div>
</DocumentFragment>
`;

exports[`useLabelMask renders the appropriate dom for a ZIP_MASK 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="static-id__label-mask"
  >
    <span
      class=""
    >
      #####
    </span>
    <span
      aria-hidden="true"
      class="ds-u-display--none"
    >
      #####
    </span>
  </div>
</DocumentFragment>
`;

exports[`useLabelMask returns labelMask and input elements 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="static-id__label-mask"
  >
    <span
      class=""
    >
      MM/DD/YYYY
    </span>
    <span
      aria-hidden="true"
      class="ds-u-display--none"
    >
      MM/DD/YYYY
    </span>
  </div>
</DocumentFragment>
`;

exports[`useLabelMask returns labelMask and input elements 2`] = `
<DocumentFragment>
  <input
    aria-describedby="static-id__label-mask"
    id="static-id"
    inputmode="numeric"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`useLabelMask shows masked value when focused 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="static-id__label-mask"
  >
    <span
      class="ds-u-visibility--screen-reader"
    >
      12/DD/YYYY
    </span>
    <span
      aria-hidden="true"
      class=""
    >
      12/DD/YYYY
    </span>
  </div>
</DocumentFragment>
`;

exports[`useLabelMask shows unfilled mask when not focused 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="static-id__label-mask"
  >
    <span
      class=""
    >
      MM/DD/YYYY
    </span>
    <span
      aria-hidden="true"
      class="ds-u-display--none"
    >
      MM/DD/YYYY
    </span>
  </div>
</DocumentFragment>
`;
